<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <GVL Name="POWER_CONTROL" Id="{759c3da8-f98a-4ec5-957f-3c0993d13406}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
O_PWR_CTRL_ROBOT_G6 AT %Q* : BOOL;
O_PWR_CTRL_ROBOT_RS4_1 AT %Q* : BOOL;
O_PWR_CTRL_ROBOT_RS4_2 AT %Q* : BOOL;
O_PWR_CTRL_ROBOT_C8 AT %Q* : BOOL;
O_PWR_CTRL_STEPDOWN AT %Q* : BOOL;
O_PWR_CTRL_INDEXING_1 AT %Q* : BOOL;//O_PWR_CONTROL_24V_INDEXING_ROTARY AT %Q* : BOOL;
O_PWR_CTRL_INDEXING_2 AT %Q* : BOOL;//O_PWR_CONTROL_24V_STRAIGHTENER_GRIPPER_EXT AT %Q* : BOOL;
O_PWR_CTRL_PC_1 AT %Q* : BOOL;

O_G6_HOME AT %Q* : BOOL;
O_RS4_HOME_1 AT %Q* : BOOL;
O_RS4_HOME_2 AT %Q* : BOOL;
O_C8_HOME_1 AT %Q* : BOOL;
O_INDEXING_HOME_1 AT %Q* : BOOL;
O_INDEXING_HOME_2 AT %Q* : BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>